improved plugin.xml generation